examples/anvil_verification/should_fail/test4/data_stable_N_cycles_after_ack_high_receiver.anvil

chan ch {
    left res : (logic[8]@#3)
}

proc data_stable_N_cycles_after_ack_high_receiver (endp : left ch) {
    reg data : logic[8];
    loop {
        let data = recv endp.res >>
        dprint "Data Receive: %d" (data) >>
        cycle 5
    }
}


